name = "bitvavo"
version = "0.1.0"
edition = "2021"
authors = ["Hindrik Stegenga <mail@hindrik.dev>"]
description = "Bitvavo API bindings"
license = "MIT"
homepage = "https://github.com/HindrikStegenga/bitvavo-rust"
repository = "https://github.com/HindrikStegenga/bitvavo-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
