[package]
name = "bitvavo"
version = "0.1.0"
edition = "2021"
authors = ["Hindrik Stegenga <mail@hindrik.dev>"]
description = "Bitvavo API bindings"
license = "MIT"
homepage = "https://github.com/HindrikStegenga/bitvavo-rust"
repository = "https://github.com/HindrikStegenga/bitvavo-rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }